--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "contact-card",
   "version": "1.0.0",
   "description": "",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
@@ -9,7 +10,8 @@
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
     "install": "concurrently \"cd client && npm install\" \"cd server && npm install\" ",
-    "client": "cd client && npm start"
+    "client": "cd client && npm start",
+    "heroku-prebuild": "npm install --dev"
   },
   "repository": {
     "type": "git",
@@ -23,5 +25,8 @@
   "homepage": "https://github.com/codequeen69/contact-card#readme",
   "dependencies": {
     "concurrently": "^7.4.0"
+  },
+  "engines": {
+    "node": "v16.16.0"
   }
 }
